welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def marquer(){
	baisseBrosse();
	leveBrosse();
}
override def run() 
{

def faireV()
{
	

	avance();
	marquer();
	avance();
	gauche();
	avance();
	marquer();
	gauche();
	avance();
	gauche();
}

faireMotif();
}
